Fixed overflow bug.

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@
   padding: 0;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   background-color: #EFB889;
   color: #000;
